--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <div class="container">
       <div class="header-container">
         <!-- This heading also notifies about the theme change.-->
-        <h1 id="toast">Calculator</h1>
+        <h1 id="toast">Akriti's Calci</h1>
         <div class="top-buttons">
           <a href="https://github.com/akrititrivedi/calculator">
-            <img src="assets/GitHubLight.svg" alt="Sun Icon" height="30" width="30" id="github-icon">
+            <img src="assets/GitHubLight.svg" alt="Sun Icon" height="25" width="25" id="github-icon">
           </a>
           <button type="button" onclick="changeTheme()" class="theme-button">
-            <img src="assets/SunIcon.svg" alt="Theme Icon" height="25" width="25" id="theme-icon">
+            <img src="assets/SunIcon.svg" alt="Theme Icon" height="19" width="19" id="theme-icon">
           </button>
         </div>
       </div>
       <div class="first-row">
         <input type="text" name="solution" id="result" placeholder="solution" readonly />
-        <input type="button" value="C" onclick="result.value=''" id="clear-button" />
+        <input type="button" value="del" onclick="result.value=''" id="clear-button" />
       </div>
       <div class="second-row">
         <input type="button" value="1" onclick="liveScreen(1)" />
@@ -52,8 +52,8 @@
         <input type="button" value="x" onclick="liveScreen('*')" />
       </div>
       <div class="fifth-row">
-        <input type="button" value="/" onclick="liveScreen('/')" />
         <input type="button" value="0" onclick="liveScreen(0)" />
+        <input type="button" value="/" onclick="liveScreen('/')" />
         <input type="button" value="." onclick="liveScreen('.')" />
         <input type="button" value="%" onclick="liveScreen('%')" />
         <input type="button" value="=" onclick="calculate(result.value)" />
